--- a/src/pages/alpine/alpstein/20140801.html
+++ b/src/pages/alpine/alpstein/20140801.html
@@ -194,7 +194,7 @@ Miniturbild einer (hoffentlich ungefährlichen) Kuhweide.
 Und noch ein Sonnenbild der nun harmlosen Landschaft.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/irUfrNE.jpg" alt="Altes Berghoten Schwägalp"/><br />
+<img src="http://i.imgur.com/irUfrNE.jpg" alt="Altes Berghotel Schwägalp"/><br />
 Ankunft um 14:30 an der Schwägalp. Leider hat mir wieder mein Knie Probleme gemacht, so dass der Abstieg etwas länger dauerte.
 </div>
 <div class="card pictureCard">
