--- a/src/pages/alpine/alpstein/20141102.html
+++ b/src/pages/alpine/alpstein/20141102.html
@@ -12,163 +12,163 @@ Nach der Fahrt durch überwiegend dichten Nebel (endlich mal Nebelschlussleuchte
     </div>
 
     <div class="card pictureCard">
-<img src="http://i.imgur.com/VCCWTQi.jpg" /><br />
+<img src="http://i.imgur.com/VCCWTQi.jpg" alt="Kronbergbahn vor Kuhweide" /><br />
 Ich nahm allerdings nicht die Bahn, sondern machte mich zu Fuss an den Aufstieg. Die ersten paar Meter noch mit Jacke, auf die ich aber gleich beim ersten Aufstieg verzichten konnte.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/s563YIq.jpg" /><br />
+<img src="http://i.imgur.com/s563YIq.jpg" alt="Schleierwolken und Wiese" /><br />
 Der Weg Richtung Scheidegg führt durch Wald und Wiesen hinauf.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/nnFuwPT.jpg" /><br />
+<img src="http://i.imgur.com/nnFuwPT.jpg" alt="Rosen an alter Wand mit Schindeln" /><br />
 Vorbei an alten Bauernhäusern.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/hrhLOOt.jpg" /><br />
+<img src="http://i.imgur.com/hrhLOOt.jpg" alt="Blick auf Säntis mit Herbstlaub"/><br />
 Auf der ersten Anhöhe der Blick auf das Ziel. Die Bäume waren selbst auf dieser Höhe noch schön belaubt.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/Is3mJi8.jpg" /><br />
+<img src="http://i.imgur.com/Is3mJi8.jpg" alt="Fahrweg zur Scheidegg mit Blick auf das Appenzeller Land"/><br />
 Etwas später erreicht man die Asphaltstraße, die zur Scheidegg führt. Im Hintergrund das typische Appenzeller Land.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/jCF25Bg.jpg" /><br />
+<img src="http://i.imgur.com/jCF25Bg.jpg" alt="Steile Straße im Schatten"/><br />
 Steilstück im Wald. Hier sieht man, dass früher auf dieser Strecke die Skiabfahrt vom Kronberg führte. Inzwischen gibt es aber keinen Skibetrieb mehr und diese Trasse wird als Rodelbahn verwendet.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/OhUFuKt.jpg" /><br />
+<img src="http://i.imgur.com/OhUFuKt.jpg" alt="Grat des Kronbergs mit Säntis"/><br />
 Der Grat vom Kronberg ist erreicht und der Säntis, der sich hinter dem Kronberg versteckt hatte, wird sichtbar.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/Hn9x5Ou.jpg" /><br />
-<img src="http://i.imgur.com/1iIx4gC.jpg" /><br />
+<img src="http://i.imgur.com/Hn9x5Ou.jpg" alt="Weg zur Scheidegg"/><br />
+<img src="http://i.imgur.com/1iIx4gC.jpg" alt="Gasthaus Scheidegg"/><br />
 Nach einer guten Stunde und 500m Aufstieg ist das Gasthaus Scheidegg auf 1300m erreicht. Ab hier wurde es dann deutlich belebter, da viele den Abstieg vom Kronberg machten.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/ct2XJo3.jpg" /><br />
+<img src="http://i.imgur.com/ct2XJo3.jpg" alt="Jakobskapelle auf dem Grat des Kronbergs"/><br />
 Ab der Scheidegg geht es auf dem breiten Rücken des Kronbergs weiter, vorbei an der schön gelegenden Jakobskapelle.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/vT8uVIO.jpg" /><br />
+<img src="http://i.imgur.com/vT8uVIO.jpg" alt="Grasrücken auf dem Kronberg"/><br />
 Blick zurück, alles sehr harmlos.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/ybqnHps.jpg" /><br />
+<img src="http://i.imgur.com/ybqnHps.jpg" alt="Ausgetretener Weg zum Gipfel"/><br />
 Und nach vorne Richtung Bergstation, die gerade eine Ladung Wanderer ausgespuckt hatte.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/0AdDHlS.jpg" /><br />
+<img src="http://i.imgur.com/0AdDHlS.jpg" alt="Sehr lange Bank"/><br />
 Laaaaange Bank auf dem Grat.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/ys95fLS.jpg" /><br />
+<img src="http://i.imgur.com/ys95fLS.jpg" alt="Blick vom Gipfel zur Bergstation der Kronbergbahn"/><br />
 Gipfel nach 2h Aufstieg auf 1660m erreicht. Neben den sonnensuchenden Spaziergängern waren auch einige Paraglider unterwegs.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/sy9cTSV.jpg" /><br />
+<img src="http://i.imgur.com/sy9cTSV.jpg" alt="Holzliegen mit Aussicht auf das Nebelmeer"/><br />
 Blick auf das Nebelmeer rund um den Bodensee.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/44XZpIZ.jpg" /><br />
+<img src="http://i.imgur.com/44XZpIZ.jpg" alt="Wegweiser auf Kronberg vor Säntis"/><br />
 Wegweiser an der Bergstation. Im Hintergrund der alles überragende Säntis.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/KNMOiML.jpg" /><br />
+<img src="http://i.imgur.com/KNMOiML.jpg" alt="Paraglider auf Kronberg"/><br />
 Ich hab mich dann ziemlich schnell an den Abstieg gemacht, zuerst Richtung Säntis. Die Paraglider starteten ebenfalls in diese Richtung, um dann aber schnell rechts herum abzubiegen.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/1Hksp67.jpg" /><br />
+<img src="http://i.imgur.com/1Hksp67.jpg" alt="Zaun vor dem Säntis"/><br />
 So auch ich, weiterhin immer auf dem Grat lang.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/YoLu55f.jpg" /><br />
+<img src="http://i.imgur.com/YoLu55f.jpg" alt="Wanderweg auf Grat entlang eines Zauns"/><br />
 Vorschau auf den weiteren Weg, es ging eigentlich immer entlang dieses Höhenzugs.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/DFvrOpJ.jpg" /><br />
+<img src="http://i.imgur.com/DFvrOpJ.jpg" alt="Kronberg von Osten"/><br />
 Blick zurück zum Kronberg.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/qEOmDwh.jpg" /><br />
-<img src="http://i.imgur.com/g7VQFSm.jpg" /><br />
+<img src="http://i.imgur.com/qEOmDwh.jpg" alt="Hangweg zur Petersalp"/><br />
+<img src="http://i.imgur.com/g7VQFSm.jpg" alt="Petersalp"/><br />
 Nach einem weiteren kleinen Aufstieg erreichte ich die Petersalp (1570m), die einen steilen kleinen Grashang für die Landwirtschaft erschließt.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/CDBqrUC.jpg" /><br />
+<img src="http://i.imgur.com/CDBqrUC.jpg" alt="Grashang mit Aussicht"/><br />
 Hier ebenfalls ein ziemlich schöne Aussicht, so dass ich erst mal eine längere Mittagspause (inzwischen 12:20) einlegte.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/wqXJiFH.jpg" /><br />
+<img src="http://i.imgur.com/wqXJiFH.jpg" alt="Nackte Füsse im November"/><br />
 Ahhh, typisch November...
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/XbbWJWg.jpg" /><br />
+<img src="http://i.imgur.com/XbbWJWg.jpg" alt="Schneereste vor dem Kronberg"/><br />
 Blick zurück auf den Kronberg und ein paar klägliche Schneereste.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/6n1LY2H.jpg" /><br />
+<img src="http://i.imgur.com/6n1LY2H.jpg" alt="Blick auf Urnäsch"/><br />
 Anschließend geht es deutlich steiler bergab, um den Bergrücken des Lauftegg zu erreichen. Im Hintergrund der kleine Ort Urnäsch.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/YsgmncN.jpg" /><br />
+<img src="http://i.imgur.com/YsgmncN.jpg" alt="Rücken des Laufteggs"/><br />
 Rücken auf 1200m erreicht, nun war ich endgültig aus dem steileren Gelände raus.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/kb4ljBu.jpg" /><br />
+<img src="http://i.imgur.com/kb4ljBu.jpg" alt="Miniaturaufnahme Gross Eugst"/><br />
 Zoom auf Gross Eugst auf der anderen Talseite.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/k2e60NG.jpg" /><br />
-<img src="http://i.imgur.com/GyWBNWp.jpg" /><br />
+<img src="http://i.imgur.com/k2e60NG.jpg" alt="Schleierwolkem am Kronberg"/><br />
+<img src="http://i.imgur.com/GyWBNWp.jpg" alt="Eiswolken über dem Gipfel"/><br />
 Schöne Eiswolken rund um den Kronberg.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/lBI0H93.jpg" /><br />
+<img src="http://i.imgur.com/lBI0H93.jpg" alt="Fahrweg Lauftegg mit Bauernhaus"/><br />
 Ab jetzt wieder hauptsächlich Fahrweg, weiterhin immer auf dem Grat lang.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/chsJaT8.jpg" /><br />
+<img src="http://i.imgur.com/chsJaT8.jpg" alt="Panorama Kronberg Säntis Zimmermanns"/><br />
 Da es sich langsam abzeichnete, dass ich zu früh am Auto sein würde, eine weitere gemütliche Pause bei Zimmermanns - Lauftegg. Hier ist fast der gesamte Weg sichtbar. Von links gings hinauf auf den Kronberg, dann über den kleine Pass auf die rechten Höhen und anschließend zum Standpunkt.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/gSy82Bs.jpg" /><br />
-<img src="http://i.imgur.com/K5yqV9H.jpg" /><br />
+<img src="http://i.imgur.com/gSy82Bs.jpg" alt="Stachlige Blume vor Zaun"/><br />
+<img src="http://i.imgur.com/K5yqV9H.jpg" alt="Gänseblumen"/><br />
 Blümchen.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/gkRhwvf.jpg" /><br />
+<img src="http://i.imgur.com/gkRhwvf.jpg" alt="Kondenzstreifen vor abgestorbenem Baum"/><br />
 Die Wolken und Kondenzstreifen hatten es mir irgendwie angetan.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/x4XJ1Hk.jpg" /><br />
+<img src="http://i.imgur.com/x4XJ1Hk.jpg" alt="Skilift Lauftegg mit Pferden vor Gonten"/><br />
 An der Bergstation des (eingestellten) Skilift Lauftegg. Im Hintergrund der Ort Gonten.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/S2MmJtw.jpg" /><br />
+<img src="http://i.imgur.com/S2MmJtw.jpg" alt="Wanderweg in herbstlichen Wald"/><br />
 Ab hier wird es wieder steiler und man verlässt den Fahrweg.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/hZFCTut.jpg" /><br />
+<img src="http://i.imgur.com/hZFCTut.jpg" alt="Steile Trasse des Skilift Lauftegg"/><br />
 Steile Trasse des SL Lauftegg. Da sind die Kinder früher im Skikurs regelmäßig rausgeflogen...
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/nAPrp5y.jpg" /><br />
+<img src="http://i.imgur.com/nAPrp5y.jpg" alt="Skilift Lauftegg vor Gonten"/><br />
 Für SL-Nostalgiker noch ein weiteres Bild des SL und Gonten.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/17RBv7z.jpg" /><br />
+<img src="http://i.imgur.com/17RBv7z.jpg" alt="Talstation Seilbahn Kronberg mit vollem Parkplatz"/><br />
 Inzwischen ordentlich Rummel an der Talstation in Jakobsbad. Die Abkehr der Bergbahnen vom Skibetrieb dürfte sich ausgezahlt haben.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/lF2Ffgi.jpg" /><br />
+<img src="http://i.imgur.com/lF2Ffgi.jpg" alt="Miniaturaufnahme Kloster Jakobsbad"/><br />
 Das Kloster neben der Talstation (das eigentliche Jakobsbad).
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/ZEzovFw.jpg" /><br />
+<img src="http://i.imgur.com/ZEzovFw.jpg" alt="Miniaturaufnahme Appenzeller Bauernhof"/><br />
 Und dahinter Bauernhäuser in der typischen Appenzeller Bauweise.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/QNm4BME.jpg" /><br />
+<img src="http://i.imgur.com/QNm4BME.jpg" alt="Kronbergbahn Talstation"/><br />
 Talstation um 14:30 erreicht. Neben der Seilbahn gibt es dort inzwischen:<br />
 - eine Sommerrodelbahn (sehr lange Warteschlange)<br />
 - ein Hochseilpark<br />
@@ -176,12 +176,12 @@ Talstation um 14:30 erreicht. Neben der Seilbahn gibt es dort inzwischen:<br />
 - ein modernes (aber zu kleines) Restaurant.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/ePbdxs0.jpg" /><br />
+<img src="http://i.imgur.com/ePbdxs0.jpg" alt="Wanderkarte Appenzellerland"/><br />
 Wanderkarte. Etwas übertrieben, denn von dem Standort dürfte nur ein Bruchteil erreichbar sein.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/w8yKP1m.jpg" /><br />
-<img src="http://i.imgur.com/zfnFYiH.jpg" /><br />
+<img src="http://i.imgur.com/w8yKP1m.jpg" alt="Wegstrecke Jakobsbad Kronberg"/><br />
+<img src="http://i.imgur.com/zfnFYiH.jpg" alt="Höhenprofil Jakobsbad Kronberg"/><br />
 Gelaufene Strecke. 15km und 1100m rauf + runter in 5:30h.
 </div>
 <div class="card">
