--- a/src/pages/alpine/alpstein/20151024.html
+++ b/src/pages/alpine/alpstein/20151024.html
@@ -13,131 +13,131 @@ Ab dort ging es dann auf rustikaler Fahrstraße sehr steil direkt den Hang hinau
     </div>
 
     <div class="card pictureCard">
-<img src="http://i.imgur.com/xvJDJlA.jpg" /><br />
+<img src="http://i.imgur.com/xvJDJlA.jpg" alt="Qualm und Nebel über Urnäsch" /><br />
 Nach etwas Aufstieg wurde der kleine Ort Urnäsch sichtbar, teils noch von Nebel und Qualm aus den Schornsteinen verhüllt.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/Zfui76M.jpg" /><br />
+<img src="http://i.imgur.com/Zfui76M.jpg" alt="Steile Straße zur Alp Faltig"/><br />
 Bei mir war immer noch Schatten. Blick zurück ins Tal.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/iX7FrAa.jpg" /><br />
+<img src="http://i.imgur.com/iX7FrAa.jpg" alt="Alp Faltig im Morgenlicht"/><br />
 Dann aber erreichte ich die ersten Sonnenstrahlen an der Alp Faltig. Dort endet der Fahrweg und es ging auf normalem Wanderweg weiter. Hiermit war auch schon über die Hälfte der benötigten Höhenmeter geschafft.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/Ofi5nhS.jpg" /><br />
+<img src="http://i.imgur.com/Ofi5nhS.jpg" alt="Grat oberhalb Neckertal"/><br />
 Ankunft auf dem Grat und Blick hinab auf der anderen Seite ins Necke(!)rtal. Eigentlich müsste ich nun nach links auf dem Grat laufen, um zur Schwägalp zu kommen. Aber da ich die Hochalp noch erreichen wollte, ging es für mich erst nach rechts hinauf.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/kHpe8Up.jpg" /><br />
+<img src="http://i.imgur.com/kHpe8Up.jpg" alt="Panorama Hochalp"/><br />
 Nach insgesamt 600m Aufstieg erreichte ich den 1500m hohen Ostgipfel der Hochalp um 9:30. Die Hochalp ist der letzte Gipfel des Grats, der von der Schwägalp nach Urnäsch führt. Folglich hat man dort einen schönen Blick ins Flachland.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/82KesmX.jpg" /><br />
+<img src="http://i.imgur.com/82KesmX.jpg" alt="Gipfel Hochalp"/><br />
 Der langgezogene Gipfel der Hochalp.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/U7otF3E.jpg" /><br />
+<img src="http://i.imgur.com/U7otF3E.jpg" alt="Gasthaus Hochalp"/><br />
 Die Gaststätte auf der Hochalp. Den Abstecher dort hin habe ich mir gespart.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/AhDaWIJ.jpg" /><br />
+<img src="http://i.imgur.com/AhDaWIJ.jpg" alt="Verschneite Churfirsten"/><br />
 Blick zu den verschneiten Churfirsten, die hinter dem Alpstein auftauchten.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/dQTZU28.jpg" /><br />
+<img src="http://i.imgur.com/dQTZU28.jpg" alt="Wanderweg Hochalp Spicher"/><br />
 Und die Vorschau auf den vor mir liegenden Weg. Bei der Alp vorne hatte ich den Grat von links kommend erreicht. Dort hin musste ich nun wieder zurück und dann weiter immer am Grat entlang Richtung Säntis.<br />
 Der Berg rechts hinten ist der Spicher, mein nächstes Ziel und ähnlich hoch wie die Hochalp.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/sUTiD3X.jpg" /><br />
+<img src="http://i.imgur.com/sUTiD3X.jpg" alt="Hangweg zu einer Alp"/><br />
 Ein typisches Bild des weiteren Wegs: immer über Rippen von einer Alp zur Nächsten. Der Pfad ist gut in Schuss und vollkommen ungefährlich.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/p1UPp2K.jpg" /><br />
+<img src="http://i.imgur.com/p1UPp2K.jpg" alt="Bewaldetes Tal im Herbst"/><br />
 Blick ins herbstliche Tal.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/VDO48cn.jpg" /><br />
+<img src="http://i.imgur.com/VDO48cn.jpg" alt="Heißluftballon von unten"/><br />
 Dann wurde ich von einem Heißluftballon überholt, von denen an diesem Tag einige unterwegs waren. Ansonsten war ich noch niemanden anderen begegnet.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/PSDwmLp.jpg" /><br />
+<img src="http://i.imgur.com/PSDwmLp.jpg" alt="Weg mit Bäumen im Herbst"/><br />
 Die typischen Herbstfarben machten sich etwas rar, da die meisten Laubbäume auf dieser Höhe ihre Blätter bereits verloren hatten.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/a8717IR.jpg" /><br />
+<img src="http://i.imgur.com/a8717IR.jpg" alt="Blick vom Spicher ins Flachland"/><br />
 Ankunft um 10:30 auf dem Spicher, Blick zurück zu einer der wagemutigen Alpen. Die Armut musste früher schon sehr groß gewesen sein, wenn es sich lohnte eine solche Wiese zu bewirtschaften. Jetzt wird dies nur noch wegen Subventionen gemacht.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/ptk51GZ.jpg" /><br />
+<img src="http://i.imgur.com/ptk51GZ.jpg" alt="Blick vom Spicher zum Säntis"/><br />
 Und Blick in die andere Richtung zum Säntis.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/QONnmQZ.jpg" /><br />
+<img src="http://i.imgur.com/QONnmQZ.jpg" alt="Blick vom Spicher zum Kronberg"/><br />
 Und nach Osten Richtung Kronberg. Dort unten im Tal stand irgendwo mein Auto.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/wNHCPvb.jpg" /><br />
+<img src="http://i.imgur.com/wNHCPvb.jpg" alt="Blick vom Spicher zur Hochalp"/><br />
 Und natürlich auch nach Westen. Rechts ist die Hochalp zu sehen. Wirkte sehr nah, aber es war trotzdem eine Stunde Wegstrecke. Links die Alp Spicher. Rechts/unten der Beweis, dass ich auch wirklich da war. 😉<br />
 Ich machte dann erst mal eine längere Pause und genoß die warme Sonne im Gras. Dort traf ich auch die ersten anderen Wanderer, die von der Schwägalp her eintrafen.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/yOqkRDd.jpg" /><br />
+<img src="http://i.imgur.com/yOqkRDd.jpg" alt="Serpentinen der Schägalp Passstraße"/><br />
 Blick hinab auf den bekanntesten Abschnitt der Schwägalp-Passstraße. Dort dröhnten die gesamte Zeit die Motorräder... etwas nervig.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/KWWVB0Q.jpg" /><br />
+<img src="http://i.imgur.com/KWWVB0Q.jpg" alt="Sumpfiger Wald"/><br />
 Nach dem Spicher führt der Weg meistens durch sumpfigen Wald.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/1fg1YUX.jpg" /><br />
+<img src="http://i.imgur.com/1fg1YUX.jpg" alt="Holzweg durch Moor"/><br />
 Obwohl zum Teil mit Brettern ausgebaut, empfehle ich hier dringend wasserdichte Schuhe.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/roroj4L.jpg" /><br />
+<img src="http://i.imgur.com/roroj4L.jpg" alt="Herbstliche Moorwiese"/><br />
 Noch mehr Moorwiesen.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/E1n3ONp.jpg" /><br />
-<img src="http://i.imgur.com/Su9mJgf.jpg" /><br />
+<img src="http://i.imgur.com/E1n3ONp.jpg" alt="Pilze mit Moos"/><br />
+<img src="http://i.imgur.com/Su9mJgf.jpg" alt="Pilz an Baumstamm"/><br />
 Und viele Pilze im Wald.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/g2VUnzT.jpg" /><br />
-<img src="http://i.imgur.com/4zzXjAh.jpg" /><br />
+<img src="http://i.imgur.com/g2VUnzT.jpg" alt="Passhöhe Schwägalp mit Säntis"/><br />
+<img src="http://i.imgur.com/4zzXjAh.jpg" alt="Gasthaus Passhöhe Schwägalp"/><br />
 Nach etwas Strecke auf asphaltiertem Waldweg kam ich schließlich um 12:00 auf der Passhöhe der Schwägalp an. Inzwischen war es richtig mollig warm, um nicht zu sagen schwül und drückend.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/07OZanX.jpg" /><br />
+<img src="http://i.imgur.com/07OZanX.jpg" alt="Naturerlebnisweg Schwägalp"/><br />
 Ab dort ging ich auf dem schön angelegtem &quot;NaturErlebnispark&quot;-Weg weiter hinauf Richtung Schwägalp. Dieser Weg führt mitten durch den großen Felssturz.<br />
 Im Hintergrund ist die Chammhalde zu sehen.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/1DYZpym.jpg" /><br />
+<img src="http://i.imgur.com/1DYZpym.jpg" alt="Aussicht Schwägalp"/><br />
 Weitere Pause oberhalb des Hochtals nordöstlich der Talstation der Säntisbahn.... das ist die eigentliche Schwägalp.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/6CnDKPd.jpg" /><br />
+<img src="http://i.imgur.com/6CnDKPd.jpg" alt="Hochtal Schwägalp"/><br />
 Sehr schöne Landschaft.<br />
 Dort kürzte ich etwas ab und ging quer über die Wiese zur alten Passstraße: Einer gesperrten, asphaltierten und einspurigen Straße, die mich wieder zu meinem Auto hinab führen sollte.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/3EYsCJY.jpg" /><br />
+<img src="http://i.imgur.com/3EYsCJY.jpg" alt="Alp Aueli"/><br />
 Ab der Mitte kann man aber von dieser Straße abzweigen und eine schönere Variante über die Alp Aueli nehmen.<br />
 Im Hintergrund der überwanderte Grat vom Vormittag: Rechts die Hochalp, links der Spicher.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/WBCGc7y.jpg" /><br />
+<img src="http://i.imgur.com/WBCGc7y.jpg" alt="Steinmauer auf Alp Aueli mit Säntis"/><br />
 Letzter Blick zurück zum Säntis. Auch auf dieser Alp keine Kühe mehr, was das Wandern in dieser Jahreszeit schon angenehmer macht.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/Vu4kPwI.jpg" /><br />
+<img src="http://i.imgur.com/Vu4kPwI.jpg" alt="Alte Passstraße zur Schwägalp"/><br />
 Am Schluß dann wieder auf der alten Passtraße. Hier kurz vor dem Ziel, das ich um 14:00 erreichte. Am Auto dann fast 20°.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/EUybArs.jpg" /><br />
-<img src="http://i.imgur.com/RL2Mk3a.jpg" /><br />
+<img src="http://i.imgur.com/EUybArs.jpg" alt="Wegstrecke Hochalp Schwägalp"/><br />
+<img src="http://i.imgur.com/RL2Mk3a.jpg" alt="Höhenprofil Hochalp Schwägalp"/><br />
 Zurückgelegte Strecke. 1100 Höhenmeter auf 18km in 6h. Gut zu erkennen der steile Aufstieg zu Beginn.
 </div>
 <div class="card">
