--- a/src/pages/alpine/alpstein/20160730.html
+++ b/src/pages/alpine/alpstein/20160730.html
@@ -7,156 +7,156 @@
 
     <div class="card">
       <h1>Wagenlücke - 30.07.2016</h1>
-      An diesem Samstag habe ich mich dran gemacht, ein paar weitere Lücken im Alpstein zu füllen und mir die Wagenlücke als Ziel ausgesucht. Die Wagenlücke ist ein Pass unterhalb des Säntis, der am Besten von Wasserauen bei Appenzell zu erreichen ist.
+      An diesem Samstag habe ich mich dran gemacht, ein paar weitere Lücken im Alpstein zu füllen und mir die Wagenlücke als Ziel ausgesucht. Die Wagenlücke ist ein Pass unterhalb des Säntis, der am besten von Wasserauen bei Appenzell zu erreichen ist.
     </div>
 
     <div class="card pictureCard">
-<img src="http://i.imgur.com/rl3FuuH.jpg.jpg" /><br />
+<img src="http://i.imgur.com/rl3FuuH.jpg.jpg" alt="Parkplatz Wasserauen" /><br />
 Um 7:40 erreichte ich den schon ziemlich gut gefüllten Parkplatz an der Talstation den Ebenalpseilbahn auf 870m. Das waren aber nicht alles Tagesgäste, sondern auch viele, die auf Mehrtagstouren im Alpstein waren.<br />
 Ich entschloss mich für den Aufstieg über Schrennen, weshalb ich (wie hier sichtbar) Richtung Süden den Hang hochstieg.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/1Lpp4ef.jpg" /><br />
-<img src="http://i.imgur.com/GzKMAti.jpg" /><br />
+<img src="http://i.imgur.com/1Lpp4ef.jpg" alt="Wasserfall durch Felsen"/><br />
+<img src="http://i.imgur.com/GzKMAti.jpg" alt="Waldweg Wasserauen Seealpsee"/><br />
 Der Weg verläuft über viele Stufen entlang einer Schlucht den Berg hinauf.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/G2bcdVK.jpg" /><br />
+<img src="http://i.imgur.com/G2bcdVK.jpg" alt="Haus im Alpstein"/><br />
 Den Wald verlässt man nach rund 300m Aufstieg. Hier ergab sich auch der erste Blick Richtung Ziel der Wanderung. Den Felsgrat links galt es zu umrunden.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/5raB1w7.jpg" /><br />
+<img src="http://i.imgur.com/5raB1w7.jpg" alt="Gasthaus Äscher unter Felswand"/><br />
 Auch der Blick auf die andere Seite des Tals wurde nun möglich. Hier ist die Gaststätte Äscher zu sehen, die unterhalb einer hohen Felswand kauert. Weiter rechts kann man das Wildkirchli und den Höhleneingang hinauf zur Ebenalp erahnen.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/HZQCj90.jpg" /><br />
-<img src="http://i.imgur.com/Rjr5fP7.jpg" /><br />
-<img src="http://i.imgur.com/guQTx2D.jpg" /><br />
-<img src="http://i.imgur.com/okuLwC3.jpg" /><br />
+<img src="http://i.imgur.com/HZQCj90.jpg" alt="Großhütten"/><br />
+<img src="http://i.imgur.com/Rjr5fP7.jpg" alt="Weidende Kühe vor Säntis"/><br />
+<img src="http://i.imgur.com/guQTx2D.jpg" alt="Kuh vor Felswand"/><br />
+<img src="http://i.imgur.com/okuLwC3.jpg" alt="Blumenwiese oberhalb Großhütten"/><br />
 Mein Weg führte nun flacher an den Alpen Klein- und Großhütten vorbei  und danach wieder steiler den Hang rauf. Die Sonne heizte schon ordentlich ein, so dass ich froh war, bald wieder in den Schatten der Berge einzutauchen.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/XInyNGS.jpg" /><br />
+<img src="http://i.imgur.com/XInyNGS.jpg" alt="Schrennen"/><br />
 Hier erreichte ich schließlich die Schrennen. Eine auf 1500m Höhe gelegenen Grashang. Ober und unterhalb einer jeweils 300m hohe Felswand.<br />
 Im Hintergrund ist nun bereits der Säntis sichtbar und rechts unten der Seealpsee.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/XBG4jwR.jpg" /><br />
+<img src="http://i.imgur.com/XBG4jwR.jpg" alt="Schäfler"/><br />
 Auf der anderen Talseite befindet sich der Schäfler, der am besten von der Ebenalp aus bestiegen wird.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/QSV8Nxo.jpg" /><br />
-<img src="http://i.imgur.com/IDJz81K.jpg" /><br />
+<img src="http://i.imgur.com/QSV8Nxo.jpg" alt="Miniaturaufnahme Restaurants Seealpsee"/><br />
+<img src="http://i.imgur.com/IDJz81K.jpg" alt="Türkiser Seealpsee von oben"/><br />
 Vorbei geht es am weit unterhalb liegendem Seealpsee. Das ganze ist schon ziemlich spektakulär, aber der Weg über die Schrennen ist breit und gut gesichert.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/dN7XZbp.jpg" /><br />
-<img src="http://i.imgur.com/RvIPgV7.jpg" /><br />
-<img src="http://i.imgur.com/8eeeIND.jpg" /><br />
+<img src="http://i.imgur.com/dN7XZbp.jpg" alt="Ageteplatte"/><br />
+<img src="http://i.imgur.com/RvIPgV7.jpg" alt="Wanderweg zur Meglisalp"/><br />
+<img src="http://i.imgur.com/8eeeIND.jpg" alt="Meglisalp"/><br />
 Da es nun flach weiterging, erreichte ich recht zügig die Meglisalp. Ein wunderbar gelegene Siedlung, bestehend aus einer Kirche, einem Gasthaus und ein paar Bauernhäusern. Für mich eine der schönsten Stellen des Alpsteins.<br />
 Versorgt werden die Häuser über eine Transportseilbahn vom Seealpsee aus.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/gZD4DuQ.jpg" /><br />
+<img src="http://i.imgur.com/gZD4DuQ.jpg" alt="Bergweg Meglisalp Ageteplatte"/><br />
 Mit dem geruhsamen flachem Weg war es nun aber vorbei und es ging den schrägen Felshang auf der Rückseite der Meglisalp hinauf.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/6rdzBNs.jpg" /><br />
+<img src="http://i.imgur.com/6rdzBNs.jpg" alt="Blumen auf Bergwiese"/><br />
 Wie immer wenn anstrengend wird, nehmen bei mir die Makroaufnahmen zu. Erstens fällt einem die Umgebung mehr auf wenn man langsamer läuft, zweitens braucht es Ausreden um stehen zu bleiben. 😉
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/A1FQ5JP.jpg" /><br />
+<img src="http://i.imgur.com/A1FQ5JP.jpg" alt="Seealpsee"/><br />
 Noch mal der Blick zurück zum Seealpsee und rechts im Schatten den Schrennen.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/I9FVxKB.jpg" /><br />
+<img src="http://i.imgur.com/I9FVxKB.jpg" alt="Raupe auf Stein"/><br />
 Keine Schneeraupe.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/vctegyh.jpg" /><br />
+<img src="http://i.imgur.com/vctegyh.jpg" alt="Wanderweg vor Altmann"/><br />
 Der Weg war recht schön, und gleichmäßig ansteigend. Im Hintergrund hier der Altmann und beim Schnee rechts davon der Rotsteinpass, den man auch gut von der Meglisalp erklimmen kann.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/qPTA1JJ.jpg" /><br />
-<img src="http://i.imgur.com/VXcoCG0.jpg" /><br />
+<img src="http://i.imgur.com/qPTA1JJ.jpg" alt="Rote Blume"/><br />
+<img src="http://i.imgur.com/VXcoCG0.jpg" alt="Blaue Blume"/><br />
 Ja! Es war heiß und anstrengend.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/zZfABVr.jpg" /><br />
+<img src="http://i.imgur.com/zZfABVr.jpg" alt="Kühe in Alpstein"/><br />
 Noch einmal der Blick zurück
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/QC0i2OT.jpg" /><br />
+<img src="http://i.imgur.com/QC0i2OT.jpg" alt="Hütte an Wagenlücke"/><br />
 Schließlich erreichte ich um 12:00 die 2075m hohe Wagenlücke (links im BIld). Dort gibt es auch eine kleine (nicht öffentliche) Hütte.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/5Kkv4Fi.jpg" /><br />
+<img src="http://i.imgur.com/5Kkv4Fi.jpg" alt="Blick Wagenlücke zum Säntis Gipfel"/><br />
 Der Gipfel des Säntis ist zum Greifen nah, aber es wären noch 500 Höhenmeter und 1 1/4h Aufstieg. Da ich dieses Jahr vernünftig bin, verzichtete ich.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/QKofCh7.jpg" /><br />
-<img src="http://i.imgur.com/qgrTomg.jpg" /><br />
+<img src="http://i.imgur.com/QKofCh7.jpg" alt="Alte Zahnrad Säntisbahn"/><br />
+<img src="http://i.imgur.com/qgrTomg.jpg" alt="Tafel Haltestelle Sörenböhl"/><br />
 Für die Bahnliebhaber unter euch habe ich die Informationstafel über die Anfang des 20. Jahrhundert geplante Säntisbahn fotografiert. Ein sehr interessantes Projekt, was mir aber auch ziemlich Aufwändig erscheint. 
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/sKbxvuF.jpg" /><br />
+<img src="http://i.imgur.com/sKbxvuF.jpg" alt="Wagenlücke"/><br />
 Für mich gab's erst mal eine wohlverdiente Pause auf der Wagenlücke. Hier wehte auch etwas Wind, der aber leider ebenfalls warm war.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/jYqrfyC.jpg" /><br />
+<img src="http://i.imgur.com/jYqrfyC.jpg" alt="Wagenlücke Richtung Säntis"/><br />
 Anschließend ging es über Schotter steil auf der anderen Seite bergab. Wie man sieht gäbe es bis hinauf zum Säntis keine weitere Möglichkeit, diesen Felsgrat zu überschreiten.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/vDTjo6t.jpg" /><br />
+<img src="http://i.imgur.com/vDTjo6t.jpg" alt="Wanderweg Wagenlücke Mesmer"/><br />
 Am Talgrund angekommen geht es zu erst recht harmlos bergab Richtung Gasthaus Mesmer.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/IiITi4T.jpg" /><br />
+<img src="http://i.imgur.com/IiITi4T.jpg" alt="Insekten auf weißer Blume"/><br />
 In den mit Blumen übersäten Wiesen summte und brummte es in der Mittagshitze. 
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/5VLjDcg.jpg" /><br />
-<img src="http://i.imgur.com/Ztq1moE.jpg" /><br />
+<img src="http://i.imgur.com/5VLjDcg.jpg" alt="Drahtseil zwischen Mesmer und Wagenlücke"/><br />
+<img src="http://i.imgur.com/Ztq1moE.jpg" alt="Bergweg unterhalb Felswand"/><br />
 Dann folgte aber unversehens der steilste Part der Wanderung. Eine felsige Steilstufe mitten im Tal musste überwunden. Der Weg ist zum Teil in den Fels geschlagen und mit Drahseil gesichert - wenn man einigermaßen Bergfest ist, ist es aber gut machbar.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/R1xGuSM.jpg" /><br />
+<img src="http://i.imgur.com/R1xGuSM.jpg" alt="Gelbe Blumen"/><br />
 Noch mehr Blumen.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/FfO5Maj.jpg" /><br />
+<img src="http://i.imgur.com/FfO5Maj.jpg" alt="Gasthaus Mesmer mit Säntis"/><br />
 Im Gasthau Mesmer kehrte ich für ein kühles Getränk ein, da ich schon merkte, dass meine mitgenommenen 1 1/2 Liter nicht ausreichen würden.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/mpzCv0O.jpg" /><br />
-<img src="http://i.imgur.com/970CvmQ.jpg" /><br />
+<img src="http://i.imgur.com/mpzCv0O.jpg" alt="Blick Mesmer Seealpsee"/><br />
+<img src="http://i.imgur.com/970CvmQ.jpg" alt="Seealpsee"/><br />
 Standardblick von Mesmer runter zum noch 500m tieferen Seealpsee.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/rklzhsn.jpg" /><br />
+<img src="http://i.imgur.com/rklzhsn.jpg" alt="Bergbach"/><br />
 Der Weg dorthin führt über viele Serpentinen entlang eines Bachs bergab. Die entgegenkommenden Wanderer mussten ordentlich schwitzen.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/4cTnHYw.jpg" /><br />
-<img src="http://i.imgur.com/uFPPZOs.jpg" /><br />
+<img src="http://i.imgur.com/4cTnHYw.jpg" alt="Alpwiesen vor Seealpsee"/><br />
+<img src="http://i.imgur.com/uFPPZOs.jpg" alt="Alpen am Seealpsee"/><br />
 Aber auch der Abstieg war nicht unanstrengend, aber ich erreichte doch recht flott den See.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/GiFz0zW.jpg" /><br />
+<img src="http://i.imgur.com/GiFz0zW.jpg" alt="Badeplatz Seealpsee"/><br />
 Der See war bei diesem Traumwetter natürlich gut belagert. Aber ich fand noch ein ruhiges Plätzchen, zog die Badehose an, durchquerte den See schwimmend und trocknete mich in der Sonne.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/l7xeh2v.jpg" /><br />
-<img src="http://i.imgur.com/WaXx1VJ.jpg" /><br />
+<img src="http://i.imgur.com/l7xeh2v.jpg" alt="Schwimmen im Seealpsee"/><br />
+<img src="http://i.imgur.com/WaXx1VJ.jpg" alt="Waldweg am Seealpsee"/><br />
 Da ich noch Zeit hatte, umrundete ich noch den See.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/McwFpaR.jpg" /><br />
+<img src="http://i.imgur.com/McwFpaR.jpg" alt="Fahrstraße Wasserauen Seealpsee"/><br />
 Anschließend ging ich auf der steilen Fahrstraße fix runter zum Parkplatz und erreichte das Auto um 16:30.
 </div>
 <div class="card pictureCard">
-<img src="http://i.imgur.com/RCNzpls.jpg" /><br />
-<img src="http://i.imgur.com/GjWIOIG.jpg" /><br />
+<img src="http://i.imgur.com/RCNzpls.jpg" alt="Wegstrecke Wasserauen Wagenlücke"/><br />
+<img src="http://i.imgur.com/GjWIOIG.jpg" alt="Höhenprofil Wasserauen Wagenlücke"/><br />
 Wanderstrecke im Überblick.
 </div>
 <div class="card">
