--- a/src/app.html
+++ b/src/app.html
@@ -174,6 +174,8 @@
           <my-page-alpine-pizol-20120324 name="/alpine/pizol/20120324"></my-page-alpine-pizol-20120324>
           <my-page-alpine-montafon-20170109 name="/alpine/montafon/20170109"></my-page-alpine-montafon-20170109>
           <my-page-alpine-damuels-20170209 name="/alpine/damuels/20170209"></my-page-alpine-damuels-20170209>
+          <my-page-alpine-laax-20170320 name="/alpine/laax/20170320"></my-page-alpine-laax-20170320>
+          <my-page-alpine-lenzerheide-20170321 name="/alpine/lenzerheide/20170321"></my-page-alpine-lenzerheide-20170321>
         </iron-pages>
       </app-header-layout>
       <app-drawer>
