--- a/src/pages/styles.html
+++ b/src/pages/styles.html
@@ -6,14 +6,14 @@
       :host {
         display: block;
         text-align: center;
-        padding-bottom: 16px;
+        padding: 0 16px 16px;
       }
 
       .card {
         display: inline-block;
         text-align: left;
         vertical-align: top;
-        margin: 16px 16px 0;
+        margin: 16px auto 0;
         padding: 16px;
         max-width: 800px;
         border-radius: 10px;
@@ -29,7 +29,6 @@
 
       .videoCard {
         display: block;
-        margin: 16px auto;
       }
 
       h1 {
