Add articles for Davos and Arlberg

--- a/src/app.html
+++ b/src/app.html
@@ -176,6 +176,8 @@
           <my-page-alpine-damuels-20170209 name="/alpine/damuels/20170209"></my-page-alpine-damuels-20170209>
           <my-page-alpine-laax-20170320 name="/alpine/laax/20170320"></my-page-alpine-laax-20170320>
           <my-page-alpine-lenzerheide-20170321 name="/alpine/lenzerheide/20170321"></my-page-alpine-lenzerheide-20170321>
+          <my-page-alpine-davos-20170327 name="/alpine/davos/20170327"></my-page-alpine-davos-20170327>
+          <my-page-alpine-arlberg-20170414 name="/alpine/arlberg/20170414"></my-page-alpine-arlberg-20170414>
         </iron-pages>
       </app-header-layout>
       <app-drawer>
