--- a/src/app.html
+++ b/src/app.html
@@ -61,6 +61,7 @@
           <my-page-games-schiffbruch name="/games/schiffbruch"></my-page-games-schiffbruch>
           <my-page-games-cannonhill name="/games/cannonhill"></my-page-games-cannonhill>
           <my-page-tools-scapemaker name="/tools/scapemaker"></my-page-tools-scapemaker>
+          <my-page-tools-kensentme name="/tools/kensentme"></my-page-tools-kensentme>
           <my-page-impressum name="/impressum"></my-page-impressum>
           <my-page-404 name="/404"></my-page-404>
           <my-page-photos name="/photos"></my-page-photos>
