--- a/src/pages/games/schiffbruch.html
+++ b/src/pages/games/schiffbruch.html
@@ -48,6 +48,43 @@
       <p><a href="https://github.com/eXpl0it3r/Schiffbruch">Github</a></p>
     </div>
     <div class="card">
+      <h2>Tipps / Lösung</h2>
+      <p>(tippe auf den Text und warte bis er lesbar wird)</p>
+      <h3>Wie kann ich Werkzeug herstellen?</h3>
+      <p class="spoiler">
+        Suche zuerst mit der Lupe z.B. am Strand nach Steinen und bei einem Baum nach Ästen. Diese beiden Gegenstände
+        kannst du im Inventar zu einer Axt kombinieren. Auf die selbe Art und Weise kannst Du noch weitere Dinge
+        herstellen.
+      </p>
+      <h3>Warum sterbe ich ständig?</h3>
+      <p class="spoiler">
+        Wenn Du nicht genug isst oder drinkst, dann sinkt deine Gesundheit. Ist diese "verbraucht", dann stirbst Du.<br />
+        Als erstes solltest Du also Trinkwasser, d.h. einen Fluss finden. Laufe dafür in das Landesinnere und achte dabei
+        auf Wassergeräusche. Unterwegs solltest Du dabei Beeren essen, um Dich am Leben zu erhalten. Hast Du den Fluss
+        gefunden, trinke, bis dein Wasservorrat wieder voll ist.<br />
+        Mit einer Angel (finde einen Liana und einen Ast und kombiniere sie im Inventar), kannst Du zudem am Fluss
+        leicht auch Nahrung finden.
+      </p>
+      <h3>Warum kann ich die großen Bäume nicht fällen?</h3>
+      <p class="spoiler">
+        Auf den großen Bäumen kannst Du später ein Baumhaus bauen, deshalb können sie nicht gefällt werden.
+      </p>
+      <h3>Wie kann ich etwas besseres als ein Zelt bauen?</h3>
+      <p class="spoiler">
+        Baue Dir zuerst ein Boot am Strand, fahre zu deinem gesunkenem Schiff und gehe dort auf die Suche. Das wird
+        Dir weiterhelfen.
+      </p>
+      <h3>Wie kann ich das Feuer anzünden?</h3>
+      <p class="spoiler">
+        Irgendwo am Strand liegt noch ein weiteres Schiffswrack mit nützlichem Inhalt, der dich zu Streichhölzern führt.
+      </p>
+      <h3>Wie kann ich gerettet werden?</h3>
+      <p class="spoiler">
+        Deine Rettung hängt vom Zufall ab. Wie groß deine Chance ist, kannst du am Rettungsring ablesen. Die Chance
+        erhöhst du permantent durch SOS-Zeichen am Strand oder temporär durch Signalfeuer bzw. Fernglas (möglich auf Bergen).
+      </p>
+    </div>
+    <div class="card">
       <h2>Pressestimmen</h2>
       <h3>PC-Welt</h3>
       <p>"[...] Schiffbruch ist Freeware und bietet einige Stunden recht anspruchsvollen Spielspaß."</p>
