--- a/src/app.html
+++ b/src/app.html
@@ -179,6 +179,8 @@
           <my-page-alpine-lenzerheide-20170321 name="/alpine/lenzerheide/20170321"></my-page-alpine-lenzerheide-20170321>
           <my-page-alpine-davos-20170327 name="/alpine/davos/20170327"></my-page-alpine-davos-20170327>
           <my-page-alpine-arlberg-20170414 name="/alpine/arlberg/20170414"></my-page-alpine-arlberg-20170414>
+          <my-page-alpine-ischgl-20170429 name="/alpine/ischgl/20170429"></my-page-alpine-ischgl-20170429>
+          <my-page-alpine-kaunertal-20170506 name="/alpine/kaunertal/20170506"></my-page-alpine-kaunertal-20170506>
         </iron-pages>
       </app-header-layout>
       <app-drawer>
