Add some old dos games

--- a/src/app.html
+++ b/src/app.html
@@ -60,6 +60,7 @@
           <my-page-start name="/" items="[[items]]"></my-page-start>
           <my-page-games-schiffbruch name="/games/schiffbruch"></my-page-games-schiffbruch>
           <my-page-games-cannonhill name="/games/cannonhill"></my-page-games-cannonhill>
+          <my-page-games-ancient name="/games/ancient"></my-page-games-ancient>
           <my-page-tools-scapemaker name="/tools/scapemaker"></my-page-tools-scapemaker>
           <my-page-tools-kensentme name="/tools/kensentme"></my-page-tools-kensentme>
           <my-page-impressum name="/impressum"></my-page-impressum>
