--- a/src/app.html
+++ b/src/app.html
@@ -59,6 +59,7 @@
         <iron-pages selected="[[route.path]]" attr-for-selected="name" fallback-selection="/404" role="main" id="pages">
           <my-page-start name="/" items="[[items]]"></my-page-start>
           <my-page-games-schiffbruch name="/games/schiffbruch"></my-page-games-schiffbruch>
+          <my-page-games-modracer name="/games/modracer"></my-page-games-modracer>
           <my-page-games-cannonhill name="/games/cannonhill"></my-page-games-cannonhill>
           <my-page-games-ancient name="/games/ancient"></my-page-games-ancient>
           <my-page-tools-scapemaker name="/tools/scapemaker"></my-page-tools-scapemaker>
