Add Speer article

--- a/src/app.html
+++ b/src/app.html
@@ -183,6 +183,7 @@
           <my-page-alpine-arlberg-20170414 name="/alpine/arlberg/20170414"></my-page-alpine-arlberg-20170414>
           <my-page-alpine-ischgl-20170429 name="/alpine/ischgl/20170429"></my-page-alpine-ischgl-20170429>
           <my-page-alpine-kaunertal-20170506 name="/alpine/kaunertal/20170506"></my-page-alpine-kaunertal-20170506>
+          <my-page-alpine-speer-20170603 name="/alpine/speer/20170603"></my-page-alpine-speer-20170603>
         </iron-pages>
       </app-header-layout>
       <app-drawer>
