--- a/src/pages/alpine/speer/20150606.html
+++ b/src/pages/alpine/speer/20150606.html
@@ -6,7 +6,7 @@
     <style include="page-styles"></style>
 
     <div class="card">
-      <h1>Speer - 06.06.2015</h1>
+      <h1>Amden-Speer - 06.06.2015</h1>
       So langsam geht der Schnee in den Bergen dahin, deshalb werden Wanderungen bis etwa 2000m Höhe möglich. Ich entschied mich diesen Samstag trotz der gewittrigen Vorhersage auf eine Tour auf den Speer, der oberhalb des Walensees liegt.<br />
 Auf Grund des für den Nachmittag angekündigten Unwetters, kam ich bereits um 7:30 in Amden (einem kleinen Ort auf einer Hochebene) an, dort parkte ich auf einem der wenigen Gratisparkplätze am Hallenbad.<br />
 Noch schnell die Bergschuhe anziehen und dann los... aber wo waren sie gleich - oh Mist, zuhause fertig vorbereitet liegen gelassen. 😞 Während ich mich noch über meine Verplantheit aufregte, entschied ich mich mit Sandalen loszulaufen und bei zu schlechtem Weg die Wanderung halt abzubrechen.
