--- a/src/pages/styles.html
+++ b/src/pages/styles.html
@@ -22,6 +22,7 @@
       }
 
       .pictureCard, .videoCard {
+        display: block;
         color: #fff;
         background-color: black;
         max-width: 1280px;
@@ -57,6 +58,18 @@
       .pictureCard img {
         margin: 0 auto -16px;
         max-width: 100%;
+      }
+
+      .pictureCard img {
+        margin: 0 auto -16px;
+        max-width: 100%;
+        max-height: 100vh;
+      }
+
+      @media (min-width: 640px) {
+        .pictureCard img {
+          max-height: calc(100vh - 75px);
+        }
       }
 
       .pictureCard a {
